# xplthread

./: CMakeLists.txt
include/: xplthread.h.in
src/: CMakeLists.txt  thread.c
